Filter out explicitly selected GCs
(cherry picked from commit f57c8f331bf9adc5f260e352adec6907f12a1f01)